--- a/solve.html
+++ b/solve.html
@@ -1,22 +1,45 @@
-<h3>Nearest stations of each campus</h3>
-<P>Nearest stations of each campus are as follows.</p>
+<!DOCTYPE html>
+<html lang="ja">
 
-<ol>
-    <li>Hakusan campus
-        <ul>
-            <li>Hakusan</li>
-            <li>Honkomagome</li>
-        </ul>
-    </li>
-    <li>Akabanedai Campus
-        <ul>
-            <li>Akabane</li>
-            <li>Akabane Iwabuchi</li>
-        </ul>
-    </li>
-    <li>Kawagoe Campus
-        <ul>
-            <li>Tsurugashima</li>
-        </ul>
-    </li>
-</ol>
+<head>
+    <meta charset="UTF-8">
+    <title>INIAD Introduction</title>
+</head>
+
+<body>
+    <h1>INIAD Introduction</h1>
+    <p>There are the following facilities in <a href="http://www.iniad.org">INIAD</a>.</p>
+    <img src="img/hub1.jpg" alt="INIAD Hub-1">
+    <table>
+        <tr>
+            <th>Classroom</th>
+            <th>Capacity</th>
+        </tr>
+        <tr>
+            <td>INIAD Hall</td>
+            <td>About 400</td>
+        </tr>
+        <tr>
+            <td>Lecture room</td>
+            <td>About 200</td>
+        </tr>
+    </table>
+
+    <h2>Inquiry</h2>
+    <form>
+        <p>
+            <textarea rows="5" cols="50">Please write your comments here.</textarea>
+        </p>
+
+        <p>
+            <input id="id_checkbox1" type="checkbox">
+            <label for="id_checkbox1">I have confirmed the contents.</label>
+        </p>
+
+        <p>
+            <input type="submit" value="Submit">
+        </p>
+    </form>
+</body>
+
+</html>
