--- a/solve.html
+++ b/solve.html
@@ -1,45 +1,13 @@
 <!DOCTYPE html>
 <html lang="ja">
-
-<head>
+  <head>
     <meta charset="UTF-8">
-    <title>INIAD Introduction</title>
-</head>
+    <title>This is a title.</title>
+    <link rel="stylesheet" type="text/css" href="solve.css">
+  </head>
 
-<body>
-    <h1>INIAD Introduction</h1>
-    <p>There are the following facilities in <a href="http://www.iniad.org">INIAD</a>.</p>
-    <img src="img/hub1.jpg" alt="INIAD Hub-1">
-    <table>
-        <tr>
-            <th>Classroom</th>
-            <th>Capacity</th>
-        </tr>
-        <tr>
-            <td>INIAD Hall</td>
-            <td>About 400</td>
-        </tr>
-        <tr>
-            <td>Lecture room</td>
-            <td>About 200</td>
-        </tr>
-    </table>
-
-    <h2>Inquiry</h2>
-    <form>
-        <p>
-            <textarea rows="5" cols="50">Please write your comments here.</textarea>
-        </p>
-
-        <p>
-            <input id="id_checkbox1" type="checkbox">
-            <label for="id_checkbox1">I have confirmed the contents.</label>
-        </p>
-
-        <p>
-            <input type="submit" value="Submit">
-        </p>
-    </form>
-</body>
-
+  <body>
+    <h1>This is a heading.</h1>
+    <p>This is a paragraph.<br>This is a paragraph.</p>
+  </body>
 </html>
