--- a/11.3. Practice HTML and CSS/1assignment2.html
+++ b/11.3. Practice HTML and CSS/1assignment2.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Sending data</title>
+    <link rel = "stylesheet" type = "text/css" href = "1assignment1.css">
 </head>
 
 <body>
