--- a/solve.html
+++ b/solve.html
@@ -2,12 +2,20 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title>This is a title.</title>
+    <title>HTMLのサンプルです。</title>
     <link rel="stylesheet" type="text/css" href="solve.css">
   </head>
-
   <body>
-    <h1>This is a heading.</h1>
-    <p>This is a paragraph.<br>This is a paragraph.</p>
+    <h1>INIAD Introduction</h1>
+    <p id = "alert">This is a sample</p>
+    <div class = "page">
+      <h2>INIAD</h2>
+      <p><span class="iniad">INIAD</span> is an abbreviation for Information Networking for Innovation and Design</p>
+    </div>
+    <div class = "page">
+      <h2>INIAD Hub-1</h2>
+      <p><span class="iniad">INIAD Hub-1</span> is a building in Akabane Campus.</p>
+      <p><span class="iniad">INIAD</span> students take lectures in <span class="iniad">INIAD Hub-1.</span></p>
+    </div>
   </body>
 </html>
