--- a/solve.html
+++ b/solve.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <meta charset="UTF-8">
-    <title>HTMLのサンプルです。</title>
-    <link rel="stylesheet" type="text/css" href="solve.css">
-  </head>
-  <body>
-    <h1>INIAD Introduction</h1>
-    <p id = "alert">This is a sample</p>
-    <div class = "page">
-      <h2>INIAD</h2>
-      <p><span class="iniad">INIAD</span> is an abbreviation for Information Networking for Innovation and Design</p>
-    </div>
-    <div class = "page">
-      <h2>INIAD Hub-1</h2>
-      <p><span class="iniad">INIAD Hub-1</span> is a building in Akabane Campus.</p>
-      <p><span class="iniad">INIAD</span> students take lectures in <span class="iniad">INIAD Hub-1.</span></p>
-    </div>
-  </body>
+<html>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Attendance quiz</title>
+</head>
+
+<body>
+
+  <a href = "https://www.iniad.org">Visit INIAD.</a>
+
+</body>
+
 </html>
