--- a/solve.html
+++ b/solve.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="UTF-8">
-  <title>Attendance quiz</title>
-</head>
-
-<body>
-
-  <a href = "https://www.iniad.org">Visit INIAD.</a>
-
-</body>
-
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8">
+    <title>JavaScript Sample</title>
+    <script src="solve.js"></script>
+  </head>
+  <body>
+    <h1>JavaScript Sample</h1>
+    <button onclick="updateTarget()">Click here!</button>
+    <p id="target"></p>
+  </body>
 </html>
