--- a/solve.html
+++ b/solve.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>JavaScript Sample</title>
+    <title>Counting a character.</title>
     <script src="solve.js"></script>
+    <link rel="stylesheet" type="text/css" href="solve.css">
   </head>
   <body>
-    <h1>JavaScript Sample</h1>
-    <button onclick="updateTarget()">Click here!</button>
-    <p id="target"></p>
+    <h1>Counting a character.</h1>
+
+    <p>This page counts how many times the character c appears in the string x.</p>
+
+    <div class="input">
+      <p>
+        <label for="input-x">x</label>
+        <input id="input-x" type="text">
+      </p>
+      <p>
+        <label for="input-c">c</label>
+        <input id="input-c" type="text">
+      </p>
+      <button onclick="count()">Count</button>
+    </div>
+    
+    <p class="result">
+      The character <span id="output-c" class="in"> </span> appears in the string <span id="output-x" class="in"> </span> <span id="output-num"> </span> times.
+    </p>
   </body>
 </html>
